--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3004 --turbopack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start -p 3004",
     "lint": "next lint"
   },
@@ -16,13 +16,13 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.4.4",
+    "next": "^16.1.1",
     "next-pwa": "^5.6.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^7.0.5",
     "pg": "^8.12.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-i18next": "^15.6.1",
     "twilio": "^5.8.0"
   },
