--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.48",
     "next": "^16.1.1",
     "next-pwa": "^5.6.0",
     "node-schedule": "^2.1.1",
@@ -32,6 +33,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^20",
     "@types/node-schedule": "^2.1.8",
     "@types/pg": "^8.11.6",
